--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Edit.cshtml
@@ -63,6 +63,9 @@
                         {
                             @Html.AntiForgeryToken()
 
+                            @* input para saber si está o no activo el campo de soporte *@
+                            <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
+
                             if (!Html.ViewData.ModelState.IsValid)
                             {
                                 <div class="alert alert-danger" role="alert">
