--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/AutorizarControlling.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/AutorizarControlling.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Validar Póliza Manual";
     ViewBag.PrimerNivel = "polizas_manuales";
     ViewBag.SegundoNivel = "PM_autorizar_controlling_pendientes";
-    ViewBag.ControllerName = "AutorizarControlling";
+    ViewBag.ControllerName = "PolizaManual";
 
     Portal_2_0.Models.empleados empleado = (Portal_2_0.Models.empleados)ViewBag.Empleado; 
 }
@@ -268,7 +268,7 @@
                         <div class="form-group row">
                             <!-- Capturista -->
                             @Html.LabelFor(model => model.id_elaborador, new { @class = "control-label col-md-1" })
-                            <input type="text" class="form-control col-md-5" value="@Model.empleados.ConcatNombre" readonly>
+                            <input type="text" class="form-control col-md-5" value="@Model.empleados2.ConcatNombre" readonly>
                             <!-- Fecha validadcion -->
                             @Html.LabelFor(model => model.fecha_creacion, new { @class = "control-label col-md-2 float-right" })
                             <div class="col-md-4">
@@ -295,6 +295,10 @@
                                 {
                                     <input type="text" class="form-control col-md-12" value="@Model.fecha_validacion.Value" readonly>
                                 }
+                                else if (Model.id_validador.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
                                 else
                                 {
                                     <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
@@ -305,7 +309,7 @@
                             <!-- Autorizador -->
                             @Html.LabelFor(model => model.id_autorizador, new { @class = "control-label col-md-1" })
 
-                            @if (empleado.id>0)
+                            @if (empleado.id > 0)
                             {
                                 <input type="text" class="form-control col-md-5" value="@empleado.ConcatNombre" readonly>
                             }
@@ -314,13 +318,48 @@
                                 <input type="text" class="form-control col-md-5" value="NO DISPONIBLE" readonly>
                             }
 
-                            <!-- Fecha validacion -->
+                            <!-- Fecha validadcion -->
                             @Html.LabelFor(model => model.fecha_autorizacion, new { @class = "control-label col-md-2 float-right" })
 
                             <div class="col-md-4">
                                 @if (Model.fecha_autorizacion.HasValue)
                                 {
                                     <input type="text" class="form-control col-md-12" value="@Model.fecha_autorizacion.Value" readonly>
+                                }
+                                else if (Model.id_autorizador.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                }
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- Contabilidad -->
+                            @Html.LabelFor(model => model.id_contabilidad, new { @class = "control-label col-md-1" })
+
+                            @if (Model.id_contabilidad.HasValue)
+                            {
+                                <input type="text" class="form-control col-md-5" value="@Model.empleados1.ConcatNombre" readonly>
+                            }
+                            else
+                            {
+                                <input type="text" class="form-control col-md-5" value="NO DISPONIBLE" readonly>
+                            }
+
+                            <!-- Fecha registro -->
+                            @Html.LabelFor(model => model.fecha_registro, new { @class = "control-label col-md-2 float-right" })
+
+                            <div class="col-md-4">
+                                @if (Model.fecha_registro.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.fecha_registro.Value" readonly>
+                                }
+                                else if (Model.id_contabilidad.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
                                 }
                                 else
                                 {
@@ -329,7 +368,7 @@
                             </div>
                         </div>
 
-                        @if (Model.estatus == Bitacoras.Util.PM_Status.ENVIADO_A_AREA && !String.IsNullOrEmpty(Model.comentario_rechazo))
+                        @if (Model.estatus == Bitacoras.Util.PM_Status.ENVIADO_A_CONTROLLING && !String.IsNullOrEmpty(Model.comentario_rechazo))
                         {
                             <div class="ln_solid"></div>
                             <div class="form-group row">
@@ -381,7 +420,7 @@
             {
                 <div class="modal-body">
                     <div class="form-group row">
-                        <p>¿Desea validar esta p&oacute;liza y enviarla a Controlling para su autorizaci&oacute;n?</p>
+                        <h6>¿Desea validar esta p&oacute;liza y enviarla a Controlling para su autorizaci&oacute;n?</h6>
                     </div>
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(model => model.id)
